New version, adapted to small viewports

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <title>Resume - Christian Villalba</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Software Developer passionate about learning and keep up with new technologies." />
+  <meta name="author" content="Christian Villalba" />
+  <title>Christian Villalba</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -46,18 +46,18 @@
           <span class="text-primary">Villalba</span>
         </h1>
         <div class="personal-info mb-5">
-          Reading , Berkshire · United Kingdom · 07XXX XXXXXX ·
-          <a href="mailto:name@email.com">christianvillalba@email.com</a>
+          Xxxxxx , Xxxxxxxx · United Kingdom · 07491 XXXXXX ·
+          <a href="mailto:christianvillalba@email.com">christianvillalba@email.com</a>
         </div>
         <p class="lead mb-5">Software Developer passionate about learning and keep up with new technologies.</p>
         <div class="social-icons">
-          <a class="social-icon" href="" target="_blank"
+          <a class="social-icon" href="https://www.linkedin.com/in/christian-villalba-2233ab206/" target="_blank"
           data-toggle="tooltip" data-placement="top" title="Go to my LinkedIn Profile">
             <i class="fab fa-linkedin-in"></i></a>
           <a class="social-icon" href="https://github.com/ChristianVillalba" target="_blank"
           data-toggle="tooltip" data-placement="top" title="Go to my GitHub Profile">
             <i class="fab fa-github"></i></a>
-          <a class="social-icon" href="" target="_blank"
+          <a class="social-icon" href="mailto:christianvillalba@email.com" target="_blank"
           data-toggle="tooltip" data-placement="top" title="Send me an email">
             <i class="fas fa-envelope"></i></a>
         </div>
@@ -85,7 +85,7 @@
             <div class="personal-skill"><i class="far fa-check-circle"></i> Enjoy collaborative problem solving environments.</div>
             <div class="personal-skill"><i class="far fa-check-circle"></i> Love of interactive, customer-centric development.</div>
             <div class="personal-skill"><i class="far fa-check-circle"></i> Passionate about new technologies but pragmatic about getting things done.</div>
-            <div class="personal-skill"><i class="far fa-check-circle"></i> Interest in Responsive Design, Mobile-First. </div>
+            <!-- <div class="personal-skill"><i class="far fa-check-circle"></i> Interest in Responsive Design, Mobile-First. </div> -->
             <div class="personal-skill"><i class="far fa-check-circle"></i> Comfortable operating in a rapidly changing environment.</div>
           </div>
         </div>
@@ -96,10 +96,9 @@
     <!-- Portfolio Grid-->
     <section class="resume-section" id="portfolio">
       <div class="resume-section-content">
-        <div class="text-left">
+        <div class="container">
           <h2 class="mb-4">Portfolio</h2>
           <!-- <h3 class="section-subheading text-muted">These are some projects, more available on my GitHub Page.</h3> -->
-        </div>
         <div class="row">
           <div class="col-lg-6 col-sm-6 mb-4">
             <div class="portfolio-item">
@@ -160,6 +159,8 @@
         </div>
       </div>
     </section>
+        </div>
+
     <!-- Modal 1-->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
@@ -228,7 +229,7 @@
                     <i class="fab fa-github mr-1"></i>
                     Code on GitHub
                   </a>
-                  <a class="btn btn-primary btn-modal mb-1" href="drumkit\drumkit.html" target="_blank">
+                  <a class="btn btn-primary btn-modal mb-1" href="simongame\simongame.html" target="_blank">
                     <i class="fas fa-folder-open mr-1"></i>
                     Open This Project
                   </a>
