adds certificates. changes order: Interest Section is swapped by Certificates Section

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">certifications</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
       </ul>
     </div>
   </nav>
@@ -51,7 +51,7 @@
           <span class="text-primary">Villalba</span>
         </h1>
         <div class="personal-info mb-5">
-          Reading , Berkshire · United Kingdom · 07491 XXXXXX ·
+          Cardiff , Wales · United Kingdom · 07491 XXXXXX ·
           <a href="mailto:christianvillalba.uk@xxxxx.com">christianvillalba.uk@xxxxx.com</a>
         </div>
         <p class="lead mb-5">Software Developer passionate about learning
@@ -74,9 +74,10 @@
         <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
           <div class="flex-grow-1">
             <h3 class="mb-0">TECHNICAL SKILLS</h3>
-            <div class="tech-skill"><i class="fab fa-python"></i> Django</div>
             <div class="tech-skill"><i class="fab fa-python"></i> Python</div>
-            <div class="tech-skill"><i class="fab fab fa-js-square"></i> JavaScript & jQuery</div>
+            <div class="tech-skill"><i class="fab fa-python"></i> Django</div>
+            <div class="tech-skill"><i class="fab fab fa-js-square"></i> JavaScript</div>
+            <div class="tech-skill"><i class="fab fab fa-js-square"></i> jQuery</div>
             <div class="tech-skill"><i class="fab fa-bootstrap"></i> Bootstrap</div>
             <div class="tech-skill"><i class="fab fa-css3-alt"></i> CSS</div>
             <div class="tech-skill"><i class="fab fa-html5"></i> HTML</div>
@@ -353,23 +354,17 @@
       </div>
     </div>
   </div>
-  <!-- Interests-->
-  <section class="resume-section" id="interests">
-    <div class="resume-section-content">
-      <h2 class="mb-4">Interests</h2>
-      <p>My main goal is to become a Full-Stack Developer.</p>
-      <p class="mb-4">I enjoy using front-end technologies thinking of making the site appealing <br>
-        and back-end components to make dynamic web applications that users can interact with.</p>
-
-      <p class="mb-0">These are my first steps as a programmer.</p>
-    </div>
-  </section>
-  <hr class="m-0" />
   <!-- Certifications-->
   <section class="resume-section" id="certifications">
     <div class="resume-section-content">
       <h2 class="mb-4">Certifications</h2>
       <ul class="fa-ul mb-0">
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-ea4f7723-aaeb-4190-9a91-819f22f0c677/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            The Complete Full-Stack JavaScript Course
+          </a>
+        </li>
         <li>
           <a href="https://www.udemy.com/certificate/UC-7a79f48f-b490-46b0-bc23-94d2e7c3e111/" target="_blank">
             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
@@ -391,13 +386,69 @@
         <li>
           <a href="https://www.udemy.com/certificate/UC-TM2EH9W3/" target="_blank">
             <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
-            Complete Python Bootcamp From Zero to Hero in Python
+            Complete Python Bootcamp: From Zero to Hero in Python
+          </a>
+        </li>
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-7723e951-8d87-4585-9a5c-2f6ff4bbe3de/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            Python for OOP: The A-to-Z OOP Python Programming Course
+          </a>
+        </li>
+
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-ed7b00cf-1314-4fda-b867-052406e90486/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            React.JS: The Complete Course for Beginners
+          </a>
+        </li>
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-353e0a8a-3f2d-4b75-8443-307e4a60f9f6/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            JavaScript: The Complete Course for Beginners
+          </a>
+        </li>
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-31ffd260-d337-40d9-b58e-a82ff6dada95/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            Bootstrap 5 Course: Build Responsive Websites
+          </a>
+        </li>
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-f8cb5014-1f28-4f8a-a942-479cda877c4f/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            HTML5 & CSS3 Complete Course: Build Websites
+          </a>
+        </li>
+
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-7248e9db-045b-42d2-b3c6-d08e79df61bf/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            Complete Git and Github Beginner to Expert
+          </a>
+        </li>
+        <li>
+          <a href="https://www.udemy.com/certificate/UC-aff237a2-f841-4c5a-9d05-74b834310815/" target="_blank">
+            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
+            Cyber Security for Beginners Complete Course
           </a>
         </li>
       </ul>
     </div>
   </section>
   </div>
+  <!-- Interests-->
+  <section class="resume-section" id="interests">
+    <div class="resume-section-content">
+      <h2 class="mb-4">Interests</h2>
+      <p>My main goal is to become a Full-Stack Developer.</p>
+      <p class="mb-4">I enjoy using front-end technologies thinking of making the site appealing <br>
+        and back-end components to make dynamic web applications that users can interact with.</p>
+
+      <p class="mb-0">These are my first steps as a programmer.</p>
+    </div>
+  </section>
+  <hr class="m-0" />
   <!-- Bootstrap core JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
