--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <body id="page-top">
   <!-- Navigation-->
   <!-- Link to background image here: -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" style="background-image: url('assets/img/fractalClearBlueZ.jpg'); background-size: cover;
-  background-repeat: no-repeat; ">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" style="background-image: url('assets/img/fractalClearBlueZ.jpg');">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Christian Villalba</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
@@ -221,10 +220,7 @@
       </div>
     </div>
   </div>
-<<<<<<< HEAD
-=======
 
->>>>>>> c4f34173404a6558390129b42f7f41c0bb565d1a
   <!-- Modal 2: Simon Game-->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -271,10 +267,7 @@
       </div>
     </div>
   </div>
-<<<<<<< HEAD
-=======
 
->>>>>>> c4f34173404a6558390129b42f7f41c0bb565d1a
   <!-- Modal 3: Drum Kit-->
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -320,10 +313,7 @@
       </div>
     </div>
   </div>
-<<<<<<< HEAD
-=======
 
->>>>>>> c4f34173404a6558390129b42f7f41c0bb565d1a
   <!-- Modal 4: This Site-->
   <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -369,8 +359,9 @@
         </div>
       </div>
     </div>
-<<<<<<< HEAD
   </div>
+  <hr class="m-0" />
+
   <!-- Certificates-->
   <section class="resume-section" id="certificates">
     <div class="resume-section-content">
@@ -478,6 +469,7 @@
     </div>
   </section>
   </div>
+  <hr class="m-0" />
 
   <!-- Interests-->
   <section class="resume-section" id="interests">
